# zweedendev

./: .gitignore  pyproject.toml  zweedendev-django.conf
fail2ban-conf/: apache-400.conf  apache-404.conf  jail.conf
mysite/: settings.py  urls.py  wsgi.py
mysite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
zweedendev/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
zweedendev/api/: urls.py
zweedendev/migrations/: 0001_initial.py  0002_auto_20200402_0337.py  0003_visitor_visitor_city_region.py  0004_auto_20200403_2135.py  0005_auto_20200403_2142.py  0006_visitor_is_safe.py  0007_auto_20200407_2342.py  0008_auto_20200408_1316.py  0009_auto_20200408_1319.py  0010_auto_20200408_1430.py
zweedendev/templates/zweedendev/: index.html
