[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "zweeden.dev"
authors = ["Zachary Weeden <zdw7287@rit.edu>"]

[tool.poetry.dependencies]
python = ">=3.6"
Django = "^3.0.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
